--- a/czjszsz.htm
+++ b/czjszsz.htm
@@ -4,7 +4,7 @@
 <head>
 <meta http-equiv="Content-Language" content="zh-cn" />
 <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
-<title>ÉîÖÐÕý¾ý</title>
+<title>æ·±ä¸­æ­£å›</title>
 <style type="text/css">
 .style3 {
 	text-align: center;
@@ -12,7 +12,7 @@
 	color: #FFFF00;
 }
 .style12 {
-	font-family: ºÚÌå;
+	font-family: é»‘ä½“;
 	font-size: xx-large;
 	text-align: center;
 	color: #FF0000;
@@ -29,11 +29,11 @@
 	text-align: left;
 	color: #FFFF00;
 	font-size: x-large;
-	font-family: ºÚÌå;
+	font-family: é»‘ä½“;
 }
 .style16 {
 	font-size: x-large;
-	font-family: ºÚÌå;
+	font-family: é»‘ä½“;
 	color: #FFFF00;
 }
 a:visited {
@@ -82,77 +82,77 @@ a:hover {
 <p class="style3">&nbsp;</p>
 <p class="style3">&nbsp;</p>
 <p class="style3">&nbsp;</p>
-<p class="style3">ÉîÛÚÖÐÑ§@³ÂÕý¾ý&nbsp; ÔÁICP±¸07072088ºÅ£¨2007Äê£©&nbsp; 
-<span class="style20">½¨ÉèÖÐ¡­¡­<br />
-</span>¸ü¶à×ÊÁÏ¼û<span class="style20"><a href="http://blog.sina.com.cn/czjszsz">¶«¸ÞÇåÁ÷ÐÂÀË²©¿Í</a></span></p>
+<p class="style3">æ·±åœ³ä¸­å­¦@é™ˆæ­£å›&nbsp; ç²¤ICPå¤‡07072088å·ï¼ˆ2007å¹´ï¼‰&nbsp; 
+<span class="style20">å»ºè®¾ä¸­â€¦â€¦<br />
+</span>æ›´å¤šèµ„æ–™è§<span class="style20"><a href="http://blog.sina.com.cn/czjszsz">ä¸œçš‹æ¸…æµæ–°æµªåšå®¢</a></span></p>
 <div style="position: absolute; width: 125px; height: 125px; z-index: 7; left: 52px; top: 9px" id="layer5" class="style12">
 	<br />
-	Õý¾ý<br />
-	Ö®½Ì</div>
+	æ­£å›<br />
+	ä¹‹æ•™</div>
 <div style="position: absolute; width: 274px; height: 477px; z-index: 3; left: 932px; top: 69px" id="layer4" class="style15">
-Çå&nbsp; Á÷<br />
+æ¸…&nbsp; æµ<br />
 <br />
-<span class="style18"><a href="´óÑ§±ÏÒµÁôÑÔÐò.htm">Ðò</a></span><br />
+<span class="style18"><a href="å¤§å­¦æ¯•ä¸šç•™è¨€åº.htm">åº</a></span><br />
 <br />
-<span class="style18"><a href="¹ÅÔÏ.htm">¹ÅÔÏ</a></span><br />
+<span class="style18"><a href="å¤éŸµ.htm">å¤éŸµ</a></span><br />
 <br />
-<span class="style18"><a href="´°Ì¨Ð¡Óï.htm">´°Ì¨Ð¡Óï</a></span><br />
+<span class="style18"><a href="çª—å°å°è¯­.htm">çª—å°å°è¯­</a></span><br />
 <br />
-<span class="style18"><a href="·çóÝÈç¼Ò.htm">·çóÝÈç¼Ò</a></span><br />
+<span class="style18"><a href="é£Žç­å¦‚å®¶.htm">é£Žç­å¦‚å®¶</a></span><br />
 <br />
-<span style="line-height: 150%; font-family: ËÎÌå; mso-ascii-font-family: &quot;Times New Roman&quot;; mso-hansi-font-family: &quot;Times New Roman&quot;" class="style18">
-<a href="ÓëÄãÎªÁÚ.htm">ÓëÄãÎªÁÚ</a></span><span lang="EN-US" style="font-size: 12.0pt; line-height: 150%"><o:p><br />
+<span style="line-height: 150%; font-family: å®‹ä½“; mso-ascii-font-family: &quot;Times New Roman&quot;; mso-hansi-font-family: &quot;Times New Roman&quot;" class="style18">
+<a href="ä¸Žä½ ä¸ºé‚».htm">ä¸Žä½ ä¸ºé‚»</a></span><span lang="EN-US" style="font-size: 12.0pt; line-height: 150%"><o:p><br />
 <br />
-<span class="style18"><a href="ÓëÒ»ÖÖÇéÐ÷ÖØ·ê.htm">ÓëÒ»ÖÖÇéÐ÷ÖØ·ê</a></span></o:p></span><br />
+<span class="style18"><a href="ä¸Žä¸€ç§æƒ…ç»ªé‡é€¢.htm">ä¸Žä¸€ç§æƒ…ç»ªé‡é€¢</a></span></o:p></span><br />
 <br />
-<span style="mso-bidi-font-size: 11.0pt; font-family: ËÎÌå; mso-ascii-font-family: Calibri; mso-hansi-font-family: Calibri" class="style18">
-<a href="¹ÅÒâ.htm">¹ÅÒâ</a></span><br />
+<span style="mso-bidi-font-size: 11.0pt; font-family: å®‹ä½“; mso-ascii-font-family: Calibri; mso-hansi-font-family: Calibri" class="style18">
+<a href="å¤æ„.htm">å¤æ„</a></span><br />
 <br />
-<span style="font-family: ËÎÌå; mso-ascii-font-family: Calibri; mso-hansi-font-family: Calibri" class="style18">
-<a href="ºìÊ÷ÁÖ¹ÛÄñ.htm">ºìÊ÷ÁÖ¹ÛÄñ</a></span><br />
+<span style="font-family: å®‹ä½“; mso-ascii-font-family: Calibri; mso-hansi-font-family: Calibri" class="style18">
+<a href="çº¢æ ‘æž—è§‚é¸Ÿ.htm">çº¢æ ‘æž—è§‚é¸Ÿ</a></span><br />
 <br />
-<span class="style18"><a href="ÓëÄÏÊ¦.htm">ÓëÄÏÊ¦</a></span></div>
+<span class="style18"><a href="ä¸Žå—å¸ˆ.htm">ä¸Žå—å¸ˆ</a></span></div>
 <div style="position: absolute; width: 323px; height: 381px; z-index: 4; left: 422px; top: 116px" id="layer3" class="style15">
-Ëæ&nbsp; ±Ê<br />
+éš&nbsp; ç¬”<br />
 <br />
-<span class="style18"><a href="½â·Å¡°ÖªÊ¶¡±.htm">½â·ÅÖªÊ¶</a></span><br />
+<span class="style18"><a href="è§£æ”¾â€œçŸ¥è¯†â€.htm">è§£æ”¾çŸ¥è¯†</a></span><br />
 <br />
-<span class="style18"><a href="¹ÛÈË×ÔÔÚ%20·½µÃ×ÔÔÚ.htm">¹ÛÈË×ÔÔÚ·½µÃ×ÔÔÚ</a></span><br />
+<span class="style18"><a href="è§‚äººè‡ªåœ¨%20æ–¹å¾—è‡ªåœ¨.htm">è§‚äººè‡ªåœ¨æ–¹å¾—è‡ªåœ¨</a></span><br />
 <br />
-<a href="¸¡ÔÆÖ®Úß.htm">
-<span style="mso-ascii-font-family: Calibri; mso-ascii-theme-font: minor-latin; mso-fareast-font-family: ËÎÌå; mso-fareast-theme-font: minor-fareast; mso-hansi-font-family: Calibri; mso-hansi-theme-font: minor-latin" class="style18">
-¸¡ÔÆÖ®</span><ruby style="ruby-align: distribute-space"><span lang="EN-US" style="font-family: ËÎÌå; mso-ascii-font-family: Calibri; mso-ascii-theme-font: minor-latin; mso-fareast-font-family: ËÎÌå; mso-fareast-theme-font: minor-fareast; mso-hansi-font-family: Calibri; mso-hansi-theme-font: minor-latin" class="style18"><span lang="EN-US">Úß</span></span></ruby></a><br />
+<a href="æµ®äº‘ä¹‹è°¶.htm">
+<span style="mso-ascii-font-family: Calibri; mso-ascii-theme-font: minor-latin; mso-fareast-font-family: å®‹ä½“; mso-fareast-theme-font: minor-fareast; mso-hansi-font-family: Calibri; mso-hansi-theme-font: minor-latin" class="style18">
+æµ®äº‘ä¹‹</span><ruby style="ruby-align: distribute-space"><span lang="EN-US" style="font-family: å®‹ä½“; mso-ascii-font-family: Calibri; mso-ascii-theme-font: minor-latin; mso-fareast-font-family: å®‹ä½“; mso-fareast-theme-font: minor-fareast; mso-hansi-font-family: Calibri; mso-hansi-theme-font: minor-latin" class="style18"><span lang="EN-US">è°¶</span></span></ruby></a><br />
 <br />
-<span style="font-family: ËÎÌå; mso-ascii-font-family: Calibri; mso-hansi-font-family: Calibri" class="style18">
-<a href="ÓëÒ»ËùÏç¼äÑ§Ð£µÄ¶ÔÊÓ.htm">ÓëÒ»ËùÏç¼äÑ§Ð£µÄ¶ÔÊÓ</a></span><br />
+<span style="font-family: å®‹ä½“; mso-ascii-font-family: Calibri; mso-hansi-font-family: Calibri" class="style18">
+<a href="ä¸Žä¸€æ‰€ä¹¡é—´å­¦æ ¡çš„å¯¹è§†.htm">ä¸Žä¸€æ‰€ä¹¡é—´å­¦æ ¡çš„å¯¹è§†</a></span><br />
 <br />
-<span class="style18"><a href="³Ç¾ÓÎÄ»¯.htm">³Ç¾ÓÎÄ»¯</a></span><br />
+<span class="style18"><a href="åŸŽå±…æ–‡åŒ–.htm">åŸŽå±…æ–‡åŒ–</a></span><br />
 <br />
-<span style="mso-bidi-font-size: 10.5pt; line-height: 150%; font-family: ËÎÌå; mso-ascii-font-family: simsun; mso-hansi-font-family: simsun; mso-bidi-font-family: ËÎÌå; color: #323E32; mso-font-kerning: 0pt" class="style18">
-<a href="ÃÎÒàÓÐµÀ.htm">ÃÎÒàÓÐµÀ</a></span><span lang="EN-US" style="mso-bidi-font-size: 10.5pt; line-height: 150%; font-family: &quot;simsun&quot;,&quot;serif&quot;; mso-bidi-font-family: ËÎÌå; color: #323E32; mso-font-kerning: 0pt"><o:p><br />
-<span style="font-family: ºÚÌå; mso-hansi-font-family: Calibri" class="style18">
-<a href="¹ØÓÚ¡°»ÊÕßÖ®Éù¡±µÄÉóÃÀ.htm">¹ØÓÚ¡°»ÊÕßÖ®Éù¡±µÄÉóÃÀ</a></span><span lang="EN-US"><o:p></o:p></span></o:p></span></div>
+<span style="mso-bidi-font-size: 10.5pt; line-height: 150%; font-family: å®‹ä½“; mso-ascii-font-family: simsun; mso-hansi-font-family: simsun; mso-bidi-font-family: å®‹ä½“; color: #323E32; mso-font-kerning: 0pt" class="style18">
+<a href="æ¢¦äº¦æœ‰é“.htm">æ¢¦äº¦æœ‰é“</a></span><span lang="EN-US" style="mso-bidi-font-size: 10.5pt; line-height: 150%; font-family: &quot;simsun&quot;,&quot;serif&quot;; mso-bidi-font-family: å®‹ä½“; color: #323E32; mso-font-kerning: 0pt"><o:p><br />
+<span style="font-family: é»‘ä½“; mso-hansi-font-family: Calibri" class="style18">
+<a href="å…³äºŽâ€œçš‡è€…ä¹‹å£°â€çš„å®¡ç¾Ž.htm">å…³äºŽâ€œçš‡è€…ä¹‹å£°â€çš„å®¡ç¾Ž</a></span><span lang="EN-US"><o:p></o:p></span></o:p></span></div>
 <div style="position: absolute; width: 255px; height: 387px; z-index: 5; left: 50px; top: 162px" id="layer2" class="style14">
-	<span class="style16">Ñ§&nbsp; Àí<br />
+	<span class="style16">å­¦&nbsp; ç†<br />
 	</span>
 	<br />
-	<a href="Èý·ÖÌìÏÂËµÉóÃÀ.htm">Èý·ÖÌìÏÂ</a><br />
+	<a href="ä¸‰åˆ†å¤©ä¸‹è¯´å®¡ç¾Ž.htm">ä¸‰åˆ†å¤©ä¸‹</a><br />
 	<br />
-	<a href="¹Ì±¾ÅàÔªÑ§Àí¹¹½¨.htm">¹Ì±¾ÅàÔª Ñ§Àí¹¹½¨</a><br />
+	<a href="å›ºæœ¬åŸ¹å…ƒå­¦ç†æž„å»º.htm">å›ºæœ¬åŸ¹å…ƒ å­¦ç†æž„å»º</a><br />
 	<br />
-	<a href="³É¹¦Á¦Óë³õÖÐ³¬³£½ÌÓý.htm">³É¹¦Á¦</a><br />
+	<a href="æˆåŠŸåŠ›ä¸Žåˆä¸­è¶…å¸¸æ•™è‚².htm">æˆåŠŸåŠ›</a><br />
 	<br />
-	<a href="ÓïÎÄ½ÌÓýÊÇÊµ¼ùÖ®Ñ§.htm">½ÌÓýÊµ¼ùÂÛ</a><br />
+	<a href="è¯­æ–‡æ•™è‚²æ˜¯å®žè·µä¹‹å­¦.htm">æ•™è‚²å®žè·µè®º</a><br />
 	<br />
-	<a href="³õÖÐÎÄÑÔÎÄ½ÌÑ§ÐèÒªÀíË³µÄ¼¸¸ö¹ØÏµ.htm">ÈýÖÖ¹ØÏµ</a><br />
+	<a href="åˆä¸­æ–‡è¨€æ–‡æ•™å­¦éœ€è¦ç†é¡ºçš„å‡ ä¸ªå…³ç³».htm">ä¸‰ç§å…³ç³»</a><br />
 	<br />
-	<a href="ÔçÆÚ½ÌÓý.htm">ÔçÆÚ½ÌÓý</a><br />
+	<a href="æ—©æœŸæ•™è‚².htm">æ—©æœŸæ•™è‚²</a><br />
 	<br />
-	<span class="style18"><a href="°àÖ÷ÈÎµÄºË¶¯Á¦.htm">°àÖ÷ÈÎµÄºË¶¯Á¦</a></span><br />
+	<span class="style18"><a href="ç­ä¸»ä»»çš„æ ¸åŠ¨åŠ›.htm">ç­ä¸»ä»»çš„æ ¸åŠ¨åŠ›</a></span><br />
 	<br />
-	<a href="Á½ÖÖ¡°Ê±¼ä¡±ÔÚÓïÎÄ½ÌÑ§ÖÐµÄ¶ÔÊÓ.htm">Á½ÖÖÊ±¼ä</a><br />
+	<a href="ä¸¤ç§â€œæ—¶é—´â€åœ¨è¯­æ–‡æ•™å­¦ä¸­çš„å¯¹è§†.htm">ä¸¤ç§æ—¶é—´</a><br />
 	<br />
-	<a href="¡°ÎÒµÄÊ±¼ä¡±Ö®·ÖÎö.htm">ÎÒµÄÊ±¼ä</a></div>
+	<a href="â€œæˆ‘çš„æ—¶é—´â€ä¹‹åˆ†æž.htm">æˆ‘çš„æ—¶é—´</a></div>
 
 </body>
 
