--- a/清流/论语微摘.htm
+++ b/清流/论语微摘.htm
@@ -4,7 +4,7 @@
 
 <head runat="server">
 <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
-<title>ÂÛÓïÎ¢Õª</title>
+<title>è®ºè¯­å¾®æ‘˜</title>
 <asp:ContentPlaceHolder id="head" runat="server">
 </asp:ContentPlaceHolder>
 <style type="text/css">
@@ -17,11 +17,11 @@
 }
 .style3 {
 	font-size: xx-large;
-	font-family: ºÚÌå;
+	font-family: é»‘ä½“;
 }
 .style4 {
 	font-size: large;
-	font-family: »ªÎÄ¿¬Ìå;
+	font-family: åŽæ–‡æ¥·ä½“;
 }
  p.MsoNormal
 	{margin-bottom:.0001pt;
@@ -38,7 +38,7 @@
 }
 .style6 {
 	font-size: x-large;
-	font-family: »ªÎÄ¿¬Ìå;
+	font-family: åŽæ–‡æ¥·ä½“;
 }
 </style>
 </head>
@@ -48,7 +48,7 @@
 <table style="width: 888px" align="center">
 	<tr>
 		<td class="style1"><br />
-		<span class="style3">ÂÛÓï Î¢Õª<br />
+		<span class="style3">è®ºè¯­ å¾®æ‘˜<br />
 		</span></td>
 	</tr>
 	<tr>
@@ -56,211 +56,211 @@
 		<p class="MsoNormal" align="center" style="text-align: center">
 		<span lang="EN-US" style="font-size: 14.0pt; mso-bidi-font-size: 11.0pt"><o:p></o:p>
 		</span></p>
-		<p>Ñ§¶øµÚÒ»</p>
-		<p>1.Ñ§¶øÊ±Ï°Ö®</p>
-		<p>2.±¾Á¢¶øµÀÉú</p>
-		<p>3.ÎáÈÕÈýÊ¡ÎáÉí</p>
-		<p>4.Ê¹ÃñÒÔÊ±</p>
-		<p>5.ÏÍÏÍ£¬Ò×É«</p>
-		<p>6.¹ýÔòÎðµ¬¸Ä</p>
-		<p>7.ÃñµÂ¹éºñ</p>
-		<p>8.ºÍÎª¹ó</p>
-		<p>9.¸æÖîÍù¶øÖªÀ´Õß</p>
+		<p>å­¦è€Œç¬¬ä¸€</p>
+		<p>1.å­¦è€Œæ—¶ä¹ ä¹‹</p>
+		<p>2.æœ¬ç«‹è€Œé“ç”Ÿ</p>
+		<p>3.å¾æ—¥ä¸‰çœå¾èº«</p>
+		<p>4.ä½¿æ°‘ä»¥æ—¶</p>
+		<p>5.è´¤è´¤ï¼Œæ˜“è‰²</p>
+		<p>6.è¿‡åˆ™å‹¿æƒ®æ”¹</p>
+		<p>7.æ°‘å¾·å½’åŽš</p>
+		<p>8.å’Œä¸ºè´µ</p>
+		<p>9.å‘Šè¯¸å¾€è€ŒçŸ¥æ¥è€…</p>
 		<p> </p>
-		<p>ÎªÕþµÚ¶þ</p>
-		<p>1.ÎªÕþÒÔµÂ</p>
-		<p>2.Ë¼ÎÞÐ°</p>
-		<p>3.ÈýÊ®¶øÁ¢</p>
-		<p>4.²»¾´£¬ºÎÒÔ±ðºõ£¿</p>
-		<p>5.¹ÛÆäËùÓÉ</p>
-		<p>6.ÎÂ¹Ê¶øÖªÐÂ</p>
-		<p>7.¾ý×Ó²»Æ÷</p>
-		<p>8.ÑÔ¹ÑÓÈ£¬ÐÐ¹Ñ»Ú</p>
-		<p>9.¾ÙÉÆ¶ø½Ì²»ÄÜ</p>
-		<p>10.¼ûÒå²»Îª£¬ÎÞÓÂÒ²</p>
+		<p>ä¸ºæ”¿ç¬¬äºŒ</p>
+		<p>1.ä¸ºæ”¿ä»¥å¾·</p>
+		<p>2.æ€æ— é‚ª</p>
+		<p>3.ä¸‰åè€Œç«‹</p>
+		<p>4.ä¸æ•¬ï¼Œä½•ä»¥åˆ«ä¹Žï¼Ÿ</p>
+		<p>5.è§‚å…¶æ‰€ç”±</p>
+		<p>6.æ¸©æ•…è€ŒçŸ¥æ–°</p>
+		<p>7.å›å­ä¸å™¨</p>
+		<p>8.è¨€å¯¡å°¤ï¼Œè¡Œå¯¡æ‚”</p>
+		<p>9.ä¸¾å–„è€Œæ•™ä¸èƒ½</p>
+		<p>10.è§ä¹‰ä¸ä¸ºï¼Œæ— å‹‡ä¹Ÿ</p>
 		<p> </p>
-		<p>°ËÙ«µÚÈý</p>
-		<p>1.¾ý×ÓÎÞËùÕù</p>
-		<p>2.ÓôÓôºõÎÄÔÕ</p>
-		<p>3.Ã¿ÊÂÎÊ</p>
-		<p>4.¶û°®ÆäÑò£¬ÎÒ°®ÆäÀñ</p>
-		<p>5.¾ýÊ¹³¼ÒÔÀñ</p>
-		<p>6.ÀÖ¶ø²»Òù£¬°§¶ø²»ÉË</p>
-		<p>7.¼ÈÍù²»¾Ì</p>
-		<p>8.Ìì½«ÒÔ·ò×ÓÎªÄ¾îì</p>
-		<p>9.¾¡ÃÀÒÓ£¬ÓÖ¾¡ÉÆÒ²</p>
+		<p>å…«ä½¾ç¬¬ä¸‰</p>
+		<p>1.å›å­æ— æ‰€äº‰</p>
+		<p>2.éƒéƒä¹Žæ–‡å“‰</p>
+		<p>3.æ¯äº‹é—®</p>
+		<p>4.å°”çˆ±å…¶ç¾Šï¼Œæˆ‘çˆ±å…¶ç¤¼</p>
+		<p>5.å›ä½¿è‡£ä»¥ç¤¼</p>
+		<p>6.ä¹è€Œä¸æ·«ï¼Œå“€è€Œä¸ä¼¤</p>
+		<p>7.æ—¢å¾€ä¸å’Ž</p>
+		<p>8.å¤©å°†ä»¥å¤«å­ä¸ºæœ¨é“Ž</p>
+		<p>9.å°½ç¾ŽçŸ£ï¼Œåˆå°½å–„ä¹Ÿ</p>
 		<p> </p>
-		<p>ÀïÈÊµÚËÄ</p>
-		<p>1.ÀïÈÊÎªÃÀ</p>
-		<p>2.ÈÊÕß°²ÈÊ</p>
-		<p>3.¾ý×ÓÎÞÖÕÊ³Ö®¼äÎ¥ÈÊ</p>
-		<p>4.²»»¼ÎÞÎ»£¬»¼ËùÒÔÁ¢</p>
-		<p>5.ÎáµÀÒ»ÒÔ¹áÖ®</p>
-		<p>6.¼ûÏÍË¼Æë</p>
-		<p>7.ÀÍ¶ø²»Ô¹</p>
-		<p>8.ÓÎ±ØÓÐ·½</p>
-		<p>9.¾ý×ÓÓûÚ«ÓÚÑÔ¶øÃôÓÚÐÐ</p>
-		<p>10.µÂ²»¹Â£¬±ØÓÐÁÚ</p>
+		<p>é‡Œä»ç¬¬å››</p>
+		<p>1.é‡Œä»ä¸ºç¾Ž</p>
+		<p>2.ä»è€…å®‰ä»</p>
+		<p>3.å›å­æ— ç»ˆé£Ÿä¹‹é—´è¿ä»</p>
+		<p>4.ä¸æ‚£æ— ä½ï¼Œæ‚£æ‰€ä»¥ç«‹</p>
+		<p>5.å¾é“ä¸€ä»¥è´¯ä¹‹</p>
+		<p>6.è§è´¤æ€é½</p>
+		<p>7.åŠ³è€Œä¸æ€¨</p>
+		<p>8.æ¸¸å¿…æœ‰æ–¹</p>
+		<p>9.å›å­æ¬²è®·äºŽè¨€è€Œæ•äºŽè¡Œ</p>
+		<p>10.å¾·ä¸å­¤ï¼Œå¿…æœ‰é‚»</p>
 		<p> </p>
-		<p>¹«Ò±³¤µÚÎå</p>
-		<p>1.µÀ²»ÐÐ£¬³Ëèõ¸¡ÓÚº£</p>
-		<p>2.ÎÅÒ»ÒÔÖªÊ®</p>
-		<p>3.ÐàÄ¾²»¿ÉµñÒ²</p>
-		<p>4.ÌýÆäÑÔ¶ø¹ÛÆäÐÐ</p>
-		<p>5.Ãô¶øºÃÑ§£¬²»³ÜÏÂÎÊ</p>
-		<p>6.Ð¡×Ó¿ñ¼ò</p>
-		<p>7.²»Äî¾É¶ñ</p>
-		<p>8.ÀÏÕß°²Ö®£¬ÅóÓÑÐÅÖ®£¬ÉÙÕß»³Ö®</p>
+		<p>å…¬å†¶é•¿ç¬¬äº”</p>
+		<p>1.é“ä¸è¡Œï¼Œä¹˜æ¡´æµ®äºŽæµ·</p>
+		<p>2.é—»ä¸€ä»¥çŸ¥å</p>
+		<p>3.æœ½æœ¨ä¸å¯é›•ä¹Ÿ</p>
+		<p>4.å¬å…¶è¨€è€Œè§‚å…¶è¡Œ</p>
+		<p>5.æ•è€Œå¥½å­¦ï¼Œä¸è€»ä¸‹é—®</p>
+		<p>6.å°å­ç‹‚ç®€</p>
+		<p>7.ä¸å¿µæ—§æ¶</p>
+		<p>8.è€è€…å®‰ä¹‹ï¼Œæœ‹å‹ä¿¡ä¹‹ï¼Œå°‘è€…æ€€ä¹‹</p>
 		<p> </p>
-		<p>ÓºÒ²µÚÁù</p>
-		<p>1.¾Ó¾´¶øÐÐ¼ò</p>
-		<p>2.¾ý×ÓÖÜ¼±²»¼Ì¸»</p>
-		<p>3.ÎÞÎªÐ¡ÈËÈå</p>
-		<p>4.ÐÐ²»ÓÉ¾¶</p>
-		<p>5.ÖÊÊ¤ÎÄÔòÒ°</p>
-		<p>6.ÎÄÊ¤ÖÊÔòÊ·</p>
-		<p>7.¾´¹íÉñ¶øÔ¶Ö®</p>
-		<p>8.ÏÈÄÑ¶øºó»ñ</p>
-		<p>9.ÖªÕß¶¯£¬ÈÊÕß¾²</p>
-		<p>10.²©Ê©ÓÚÃñ¶øÄÜ¼ÃÖÚ</p>
+		<p>é›ä¹Ÿç¬¬å…­</p>
+		<p>1.å±…æ•¬è€Œè¡Œç®€</p>
+		<p>2.å›å­å‘¨æ€¥ä¸ç»§å¯Œ</p>
+		<p>3.æ— ä¸ºå°äººå„’</p>
+		<p>4.è¡Œä¸ç”±å¾„</p>
+		<p>5.è´¨èƒœæ–‡åˆ™é‡Ž</p>
+		<p>6.æ–‡èƒœè´¨åˆ™å²</p>
+		<p>7.æ•¬é¬¼ç¥žè€Œè¿œä¹‹</p>
+		<p>8.å…ˆéš¾è€ŒåŽèŽ·</p>
+		<p>9.çŸ¥è€…åŠ¨ï¼Œä»è€…é™</p>
+		<p>10.åšæ–½äºŽæ°‘è€Œèƒ½æµŽä¼—</p>
 		<p> </p>
-		<p>Êö¶øµÚÆß</p>
-		<p>1.ÐÅ¶øºÃ¹Å</p>
-		<p>2.Ñ§¶ø²»Ñá</p>
-		<p>3.»åÈË²»¾ë</p>
-		<p>4.ÓÎÓÚÒÕ</p>
-		<p>5.²»·ß²»Æô£¬²»ã­²»·¢</p>
-		<p>6.ÁÙÊÂ¶ø¾å</p>
-		<p>7.´ÓÎáËùºÃ</p>
-		<p>8.×ÓÒÔËÄ½Ì£ºÎÄ¡¢ÐÐ¡¢ÖÒ¡¢ÐÅ</p>
-		<p>9.½à¼ºÒÔ½ø</p>
-		<p>10.ÎÂ¶øÀ÷£¬Íþ¶ø²»ÃÍ£¬¹§¶ø°²</p>
+		<p>è¿°è€Œç¬¬ä¸ƒ</p>
+		<p>1.ä¿¡è€Œå¥½å¤</p>
+		<p>2.å­¦è€Œä¸åŽŒ</p>
+		<p>3.è¯²äººä¸å€¦</p>
+		<p>4.æ¸¸äºŽè‰º</p>
+		<p>5.ä¸æ„¤ä¸å¯ï¼Œä¸æ‚±ä¸å‘</p>
+		<p>6.ä¸´äº‹è€Œæƒ§</p>
+		<p>7.ä»Žå¾æ‰€å¥½</p>
+		<p>8.å­ä»¥å››æ•™ï¼šæ–‡ã€è¡Œã€å¿ ã€ä¿¡</p>
+		<p>9.æ´å·±ä»¥è¿›</p>
+		<p>10.æ¸©è€ŒåŽ‰ï¼Œå¨è€Œä¸çŒ›ï¼Œæ­è€Œå®‰</p>
 		<p> </p>
-		<p>Ì©²®µÚ°Ë</p>
-		<p>1.ÓÂ¶øÎÞÀñÔòÂÒ</p>
-		<p>2.Ê¿²»¿ÉÒÔ²»ºëÒã</p>
-		<p>3.ÐËÓÚÊ«£¬Á¢ÓÚÀñ£¬³ÉÓÚÀÖ</p>
-		<p>4.Î£°î²»Èë£¬ÂÒ°î²»¾Ó</p>
-		<p>5.ÌìÏÂÓÐµÀÔò¼û£¬ÎÞµÀÔòÒþ</p>
-		<p>6.²»ÔÚÆäÎ»£¬²»Ä±ÆäÕþ</p>
-		<p>7.ÌÆÓÝÖ®¼Ê£¬ÓÚË¹ÎªÊ¢</p>
+		<p>æ³°ä¼¯ç¬¬å…«</p>
+		<p>1.å‹‡è€Œæ— ç¤¼åˆ™ä¹±</p>
+		<p>2.å£«ä¸å¯ä»¥ä¸å¼˜æ¯…</p>
+		<p>3.å…´äºŽè¯—ï¼Œç«‹äºŽç¤¼ï¼ŒæˆäºŽä¹</p>
+		<p>4.å±é‚¦ä¸å…¥ï¼Œä¹±é‚¦ä¸å±…</p>
+		<p>5.å¤©ä¸‹æœ‰é“åˆ™è§ï¼Œæ— é“åˆ™éš</p>
+		<p>6.ä¸åœ¨å…¶ä½ï¼Œä¸è°‹å…¶æ”¿</p>
+		<p>7.å”è™žä¹‹é™…ï¼ŒäºŽæ–¯ä¸ºç››</p>
 		<p> </p>
-		<p>×Óº±µÚ¾Å</p>
-		<p>1.ÎãÒâ£¬Îã±Ø£¬Îã¹Ì£¬ÎãÎÒ</p>
-		<p>2.ÌìÖ®½«É¥Ë¹ÎÄÒ²</p>
-		<p>3.¾ý×Ó¶àºõÔÕ£¬²»¶àÒ²</p>
-		<p>4.Îá²»ÊÔ£¬¹ÊÒÕ</p>
-		<p>5.ßµÆäÁ½¶Ë¶ø½ßÑÉ</p>
-		<p>6.Ñ­Ñ­È»ÉÆÓÕÈË</p>
-		<p>7.¾ý×Ó¾ÓÖ®£¬ºÎÂªÖ®ÓÐ£¿</p>
-		<p>8.ºóÉú¿ÉÎ·</p>
-		<p>9.ÊÇµÀÒ²£¬ºÎ×ãÒÔê°£¿</p>
-		<p>10.¿ÉÓë¹²Ñ§£¬Î´¿ÉÓëÊÊµÀ</p>
+		<p>å­ç½•ç¬¬ä¹</p>
+		<p>1.æ¯‹æ„ï¼Œæ¯‹å¿…ï¼Œæ¯‹å›ºï¼Œæ¯‹æˆ‘</p>
+		<p>2.å¤©ä¹‹å°†ä¸§æ–¯æ–‡ä¹Ÿ</p>
+		<p>3.å›å­å¤šä¹Žå“‰ï¼Œä¸å¤šä¹Ÿ</p>
+		<p>4.å¾ä¸è¯•ï¼Œæ•…è‰º</p>
+		<p>5.å©å…¶ä¸¤ç«¯è€Œç«­ç„‰</p>
+		<p>6.å¾ªå¾ªç„¶å–„è¯±äºº</p>
+		<p>7.å›å­å±…ä¹‹ï¼Œä½•é™‹ä¹‹æœ‰ï¼Ÿ</p>
+		<p>8.åŽç”Ÿå¯ç•</p>
+		<p>9.æ˜¯é“ä¹Ÿï¼Œä½•è¶³ä»¥è‡§ï¼Ÿ</p>
+		<p>10.å¯ä¸Žå…±å­¦ï¼Œæœªå¯ä¸Žé€‚é“</p>
 		<p> </p>
-		<p>Ïçµ³µÚÊ®</p>
-		<p>1.Õ«±Ø±äÊ³</p>
-		<p>2.Ï¯²»Õý£¬²»×ø</p>
-		<p>3.°Ý¶øÊÜÖ®</p>
-		<p>4.¾Ó²»¿Í</p>
-		<p>5.Ê±ÔÕÊ±ÔÕ£¡</p>
+		<p>ä¹¡å…šç¬¬å</p>
+		<p>1.æ–‹å¿…å˜é£Ÿ</p>
+		<p>2.å¸­ä¸æ­£ï¼Œä¸å</p>
+		<p>3.æ‹œè€Œå—ä¹‹</p>
+		<p>4.å±…ä¸å®¢</p>
+		<p>5.æ—¶å“‰æ—¶å“‰ï¼</p>
 		<p> </p>
-		<p>ÏÈ½øµÚÊ®Ò»</p>
-		<p>1.Î´ÖªÉú£¬ÑÉÖªËÀ£¿</p>
-		<p>2.ÑÔ±ØÓÐÖÐ</p>
-		<p>3.¹ýÓÌ²»¼°</p>
-		<p>4.ÒÔµÀÊÂ¾ý</p>
-		<p>5.Ôô·òÈËÖ®×Ó</p>
-		<p>6.Ó½¶ø¹é</p>
+		<p>å…ˆè¿›ç¬¬åä¸€</p>
+		<p>1.æœªçŸ¥ç”Ÿï¼Œç„‰çŸ¥æ­»ï¼Ÿ</p>
+		<p>2.è¨€å¿…æœ‰ä¸­</p>
+		<p>3.è¿‡çŠ¹ä¸åŠ</p>
+		<p>4.ä»¥é“äº‹å›</p>
+		<p>5.è´¼å¤«äººä¹‹å­</p>
+		<p>6.å’è€Œå½’</p>
 		<p> </p>
 		<p> </p>
-		<p>ÑÕÔ¨µÚÊ®¶þ</p>
-		<p>1.¿Ë¼º¸´Àñ</p>
-		<p>2.ÎªÈÊÓÉ¼º</p>
-		<p>3.ÔÚ°îÎÞÔ¹£¬ÔÚ¼ÒÎÞÔ¹</p>
-		<p>4.²»ÓÇ²»¾å</p>
-		<p>5.¹§¶øÓÐÀñ</p>
-		<p>6.ËÄº£Ö®ÄÚ½ÔÐÖµÜÒ²</p>
-		<p>7.³ÉÈËÖ®ÃÀ</p>
-		<p>8.²ÝÉÏÖ®·ç£¬±ØÙÈ</p>
-		<p>9.ÏÈÊÂºóµÃ</p>
-		<p>10.¾ý×ÓÒÔÎÄ»áÓÑ£¬ÒÔÓÑ¸¨ÈÊ</p>
+		<p>é¢œæ¸Šç¬¬åäºŒ</p>
+		<p>1.å…‹å·±å¤ç¤¼</p>
+		<p>2.ä¸ºä»ç”±å·±</p>
+		<p>3.åœ¨é‚¦æ— æ€¨ï¼Œåœ¨å®¶æ— æ€¨</p>
+		<p>4.ä¸å¿§ä¸æƒ§</p>
+		<p>5.æ­è€Œæœ‰ç¤¼</p>
+		<p>6.å››æµ·ä¹‹å†…çš†å…„å¼Ÿä¹Ÿ</p>
+		<p>7.æˆäººä¹‹ç¾Ž</p>
+		<p>8.è‰ä¸Šä¹‹é£Žï¼Œå¿…åƒ</p>
+		<p>9.å…ˆäº‹åŽå¾—</p>
+		<p>10.å›å­ä»¥æ–‡ä¼šå‹ï¼Œä»¥å‹è¾…ä»</p>
 		<p> </p>
-		<p>×ÓÂ·µÚÊ®Èý</p>
-		<p>1.ÏÈÓÐË¾£¬ÉâÐ¡¹ý£¬¾ÙÏÍ²Å</p>
-		<p>2.¾ý×ÓÆäÑÔ£¬ÎÞËù¹¶¶øÒÑÒÓ</p>
-		<p>3.Îá²»ÈçÀÏÅ©</p>
-		<p>4.Ò»ÑÔ¶ø¿ÉÒÔÐË°î</p>
-		<p>5.ÎÞ¼ûÐ¡Àû</p>
-		<p>6.Í·óâÖ®ÈË£¬ºÎ×ãËãÒ²</p>
-		<p>7.ºÍ¶ø²»Í¬</p>
-		<p>8.Ì©¶ø²»½¾</p>
-		<p>9.ÒÔ²»½ÌÃñÕ½£¬ÊÇÎ½ÆúÖ®</p>
+		<p>å­è·¯ç¬¬åä¸‰</p>
+		<p>1.å…ˆæœ‰å¸ï¼Œèµ¦å°è¿‡ï¼Œä¸¾è´¤æ‰</p>
+		<p>2.å›å­å…¶è¨€ï¼Œæ— æ‰€è‹Ÿè€Œå·²çŸ£</p>
+		<p>3.å¾ä¸å¦‚è€å†œ</p>
+		<p>4.ä¸€è¨€è€Œå¯ä»¥å…´é‚¦</p>
+		<p>5.æ— è§å°åˆ©</p>
+		<p>6.å¤´ç­²ä¹‹äººï¼Œä½•è¶³ç®—ä¹Ÿ</p>
+		<p>7.å’Œè€Œä¸åŒ</p>
+		<p>8.æ³°è€Œä¸éª„</p>
+		<p>9.ä»¥ä¸æ•™æ°‘æˆ˜ï¼Œæ˜¯è°“å¼ƒä¹‹</p>
 		<p> </p>
-		<p>ÏÜÎÊµÚÊ®ËÄ</p>
-		<p>1.Ê¿¶ø»³¾Ó£¬²»×ãÒÔÎªÊ¿ÒÓ</p>
-		<p>2.¼ûÀûË¼Òå</p>
-		<p>3.¾ý×ÓÉÏ´ï£¬Ð¡ÈËÏÂ´ï</p>
-		<p>4.æ÷²»³ÆÆäÁ¦£¬³ÆÆäµÂÒ²</p>
-		<p>5.ÒÔÖ±±¨Ô¹</p>
-		<p>6.ÏÂÑ§¶øÉÏ´ï</p>
-		<p>7.ÐÞ¼ºÒÔ°²ÈË</p>
+		<p>å®ªé—®ç¬¬åå››</p>
+		<p>1.å£«è€Œæ€€å±…ï¼Œä¸è¶³ä»¥ä¸ºå£«çŸ£</p>
+		<p>2.è§åˆ©æ€ä¹‰</p>
+		<p>3.å›å­ä¸Šè¾¾ï¼Œå°äººä¸‹è¾¾</p>
+		<p>4.éª¥ä¸ç§°å…¶åŠ›ï¼Œç§°å…¶å¾·ä¹Ÿ</p>
+		<p>5.ä»¥ç›´æŠ¥æ€¨</p>
+		<p>6.ä¸‹å­¦è€Œä¸Šè¾¾</p>
+		<p>7.ä¿®å·±ä»¥å®‰äºº</p>
 		<p> </p>
-		<p>ÎÀÁé¹«µÚÊ®Îå</p>
-		<p>1.¾ý×Ó¹ÌÇî</p>
-		<p>2.ÓÑÆäÊ¿Ö®ÈÊÕß</p>
-		<p>3.¹ª×Ôºñ¶ø±¡ÔðÓÚÈË</p>
-		<p>4.¾ý×Óñæ¶ø²»Õù£¬Èº¶ø²»µ³</p>
-		<p>5.ÇÉÑÔÂÒµÂ</p>
-		<p>6.ÈËÄÜºëµÀ£¬·ÇµÀºëÈË</p>
-		<p>7.ÓÇµÀ²»ÓÇÆ¶</p>
-		<p>8.µ±ÈÊ²»ÈÃÓÚÊ¦</p>
-		<p>9.ÓÐ½ÌÎÞÀà</p>
-		<p>10.µÀ²»Í¬£¬²»ÏàÎªÄ±</p>
+		<p>å«çµå…¬ç¬¬åäº”</p>
+		<p>1.å›å­å›ºç©·</p>
+		<p>2.å‹å…¶å£«ä¹‹ä»è€…</p>
+		<p>3.èº¬è‡ªåŽšè€Œè–„è´£äºŽäºº</p>
+		<p>4.å›å­çŸœè€Œä¸äº‰ï¼Œç¾¤è€Œä¸å…š</p>
+		<p>5.å·§è¨€ä¹±å¾·</p>
+		<p>6.äººèƒ½å¼˜é“ï¼Œéžé“å¼˜äºº</p>
+		<p>7.å¿§é“ä¸å¿§è´«</p>
+		<p>8.å½“ä»ä¸è®©äºŽå¸ˆ</p>
+		<p>9.æœ‰æ•™æ— ç±»</p>
+		<p>10.é“ä¸åŒï¼Œä¸ç›¸ä¸ºè°‹</p>
 		<p> </p>
-		<p>¼¾ÊÏµÚÊ®Áù</p>
-		<p>1.Î£¶ø²»³Ö£¬µß¶ø²»·ö</p>
-		<p>2.¾ùÎÞÆ¶£¬ºÍÎÞ¹Ñ£¬°²ÎÞÇã</p>
-		<p>3.¼ÈÀ´Ö®£¬Ôò°²Ö®</p>
-		<p>4.ÌìÏÂÓÐµÀ£¬ÔòÊüÈË²»Òé</p>
-		<p>5.ÓÑÖ±£¬ÓÑÁÂ£¬ÓÑ¶àÎÅ</p>
-		<p>6.¾ý×ÓÓÐÈýÎ·£ºÎ·ÌìÃü£¬Î·´óÈË£¬Î·Ê¥ÈËÖ®ÑÔ</p>
-		<p>7.²»Ñ§Ê«£¬ÎÞÒÔÑÔ</p>
-		<p>8.²»Ñ§Àñ£¬ÎÞÒÔÁ¢</p>
-		<p>9.¾ý×ÓÖ®Ô¶Æä×ÓÒ²</p>
+		<p>å­£æ°ç¬¬åå…­</p>
+		<p>1.å±è€Œä¸æŒï¼Œé¢ è€Œä¸æ‰¶</p>
+		<p>2.å‡æ— è´«ï¼Œå’Œæ— å¯¡ï¼Œå®‰æ— å€¾</p>
+		<p>3.æ—¢æ¥ä¹‹ï¼Œåˆ™å®‰ä¹‹</p>
+		<p>4.å¤©ä¸‹æœ‰é“ï¼Œåˆ™åº¶äººä¸è®®</p>
+		<p>5.å‹ç›´ï¼Œå‹è°…ï¼Œå‹å¤šé—»</p>
+		<p>6.å›å­æœ‰ä¸‰ç•ï¼šç•å¤©å‘½ï¼Œç•å¤§äººï¼Œç•åœ£äººä¹‹è¨€</p>
+		<p>7.ä¸å­¦è¯—ï¼Œæ— ä»¥è¨€</p>
+		<p>8.ä¸å­¦ç¤¼ï¼Œæ— ä»¥ç«‹</p>
+		<p>9.å›å­ä¹‹è¿œå…¶å­ä¹Ÿ</p>
 		<p> </p>
-		<p>Ñô»õµÚÊ®Æß</p>
-		<p>1.ÐÔÏà½üÒ²£¬Ï°ÏàÔ¶Ò²</p>
-		<p>2.Î¨ÉÏÖªÓëÏÂÓÞ²»ÒÆ</p>
-		<p>3.¹§¡¢¿í¡¢ÐÅ¡¢Ãô¡¢»Ý</p>
-		<p>4.ºÃ¸Õ²»ºÃÑ§£¬Æä±ÎÒ²¿ñ</p>
-		<p>5.ÐË¡¢¹Û¡¢Èº¡¢Ô¹</p>
-		<p>6.É«À÷ÄÚÜó£¬Æ©ÖîÐ¡ÈË</p>
-		<p>7.ÏçÔ¸£¬µÂÖ®ÔôÒ²</p>
-		<p>8.¹¶»¼Ê§Ö®£¬ÎÞËù²»ÖÁÒÓ</p>
-		<p>9.ÌìºÎÑÔÔÕ£¿</p>
-		<p>10.ÄêËÄÊ®¶ø¼û¶ñÑÉ£¬ÆäÖÕÒ²ÒÑ</p>
+		<p>é˜³è´§ç¬¬åä¸ƒ</p>
+		<p>1.æ€§ç›¸è¿‘ä¹Ÿï¼Œä¹ ç›¸è¿œä¹Ÿ</p>
+		<p>2.å”¯ä¸ŠçŸ¥ä¸Žä¸‹æ„šä¸ç§»</p>
+		<p>3.æ­ã€å®½ã€ä¿¡ã€æ•ã€æƒ </p>
+		<p>4.å¥½åˆšä¸å¥½å­¦ï¼Œå…¶è”½ä¹Ÿç‹‚</p>
+		<p>5.å…´ã€è§‚ã€ç¾¤ã€æ€¨</p>
+		<p>6.è‰²åŽ‰å†…èï¼Œè­¬è¯¸å°äºº</p>
+		<p>7.ä¹¡æ„¿ï¼Œå¾·ä¹‹è´¼ä¹Ÿ</p>
+		<p>8.è‹Ÿæ‚£å¤±ä¹‹ï¼Œæ— æ‰€ä¸è‡³çŸ£</p>
+		<p>9.å¤©ä½•è¨€å“‰ï¼Ÿ</p>
+		<p>10.å¹´å››åè€Œè§æ¶ç„‰ï¼Œå…¶ç»ˆä¹Ÿå·²</p>
 		<p> </p>
-		<p>Î¢×ÓµÚÊ®°Ë</p>
-		<p>1.²»ÊËÎÞÒå</p>
-		<p>2.ÑÔÖÐÂ×£¬ÐÐÖÐÂÇ</p>
-		<p>3.ÎÞ¿ÉÎÞ²»¿É</p>
-		<p>4.ÎÞÇó±¸ÓÚÒ»ÈË</p>
+		<p>å¾®å­ç¬¬åå…«</p>
+		<p>1.ä¸ä»•æ— ä¹‰</p>
+		<p>2.è¨€ä¸­ä¼¦ï¼Œè¡Œä¸­è™‘</p>
+		<p>3.æ— å¯æ— ä¸å¯</p>
+		<p>4.æ— æ±‚å¤‡äºŽä¸€äºº</p>
 		<p> </p>
-		<p>×ÓÕÅµÚÊ®¾Å</p>
-		<p>1.×ðÏÍ¶øÈÝÖÚ</p>
-		<p>2.ÇÐÎÊ¶ø½üË¼</p>
-		<p>3.Ð¡ÈËÖ®¹ýÒ²±ØÎÄ</p>
-		<p>4.ÍûÖ®Ù²È»£¬¼´Ö®Ò²ÎÂ£¬ÌýÆäÑÔÒ²À÷</p>
-		<p>5.ÐÅ¶øºóÚÉ</p>
-		<p>6.ÊË¶øÓÅÔòÑ§£¬Ñ§¶øÓÅÔòÊË</p>
-		<p>7.ÉÏÊ§ÆäµÀ£¬ÃñÉ¢¾ÃÒÓ</p>
-		<p>8.¾ý×Ó¶ñ¾ÓÏÂÁ÷£¬ÌìÏÂÖ®¶ñ½Ô¹éÑÉ</p>
-		<p>9.ÖÙÄá£¬ÈÕÔÂÒ²</p>
+		<p>å­å¼ ç¬¬åä¹</p>
+		<p>1.å°Šè´¤è€Œå®¹ä¼—</p>
+		<p>2.åˆ‡é—®è€Œè¿‘æ€</p>
+		<p>3.å°äººä¹‹è¿‡ä¹Ÿå¿…æ–‡</p>
+		<p>4.æœ›ä¹‹ä¿¨ç„¶ï¼Œå³ä¹‹ä¹Ÿæ¸©ï¼Œå¬å…¶è¨€ä¹ŸåŽ‰</p>
+		<p>5.ä¿¡è€ŒåŽè°</p>
+		<p>6.ä»•è€Œä¼˜åˆ™å­¦ï¼Œå­¦è€Œä¼˜åˆ™ä»•</p>
+		<p>7.ä¸Šå¤±å…¶é“ï¼Œæ°‘æ•£ä¹…çŸ£</p>
+		<p>8.å›å­æ¶å±…ä¸‹æµï¼Œå¤©ä¸‹ä¹‹æ¶çš†å½’ç„‰</p>
+		<p>9.ä»²å°¼ï¼Œæ—¥æœˆä¹Ÿ</p>
 		<p> </p>
-		<p>Ò¢Ô»µÚ¶þÊ®</p>
-		<p>1.Íò·½ÓÐ×ï£¬×ïÔÚëÞ¹ª</p>
-		<p>2.ÐËÃð¹ú£¬¼Ì¾øÊÀ£¬¾ÙÒÝÃñ£¬ÌìÏÂÖ®Ãñ¹éÐÄÑÉ</p>
-		<p>3.²»ÖªÃü£¬ÎÞÒÔÎª¾ý×ÓÒ²</p>
+		<p>å°§æ›°ç¬¬äºŒå</p>
+		<p>1.ä¸‡æ–¹æœ‰ç½ªï¼Œç½ªåœ¨æœ•èº¬</p>
+		<p>2.å…´ç­å›½ï¼Œç»§ç»ä¸–ï¼Œä¸¾é€¸æ°‘ï¼Œå¤©ä¸‹ä¹‹æ°‘å½’å¿ƒç„‰</p>
+		<p>3.ä¸çŸ¥å‘½ï¼Œæ— ä»¥ä¸ºå›å­ä¹Ÿ</p>
 		<p class="MsoNormal" align="center" style="text-align: center"><span class="style4"><br />
 		  <br />
 	    </span><br />
