--- a/观人自在 方得自在.htm
+++ b/观人自在 方得自在.htm
@@ -4,7 +4,7 @@
 
 <head runat="server">
 <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
-<title>¹ÛÈË×ÔÔÚ ·½µÃ×ÔÔÚ</title>
+<title>è§‚äººè‡ªåœ¨ æ–¹å¾—è‡ªåœ¨</title>
 <asp:ContentPlaceHolder id="head" runat="server">
 </asp:ContentPlaceHolder>
 <style type="text/css">
@@ -17,11 +17,11 @@
 }
 .style3 {
 	font-size: xx-large;
-	font-family: ºÚÌå;
+	font-family: é»‘ä½“;
 }
 .style4 {
 	font-size: large;
-	font-family: »ªÎÄ¿¬Ìå;
+	font-family: åŽæ–‡æ¥·ä½“;
 }
  p.MsoNormal
 	{margin-bottom:.0001pt;
@@ -44,37 +44,37 @@
 <table style="width: 888px" align="center">
 	<tr>
 		<td class="style1"><br />
-		<span style="font-family: ËÎÌå; mso-ascii-font-family: Calibri; mso-hansi-font-family: Calibri" class="style5">
-		¹ÛÈË×ÔÔÚ</span><span lang="EN-US"><span style="mso-spacerun: yes" class="style5">
+		<span style="font-family: å®‹ä½“; mso-ascii-font-family: Calibri; mso-hansi-font-family: Calibri" class="style5">
+		è§‚äººè‡ªåœ¨</span><span lang="EN-US"><span style="mso-spacerun: yes" class="style5">
 		</span></span>
-		<span style="font-family: ËÎÌå; mso-ascii-font-family: Calibri; mso-hansi-font-family: Calibri" class="style5">
-		·½µÃ×ÔÔÚ</span><span class="style3"><br />
+		<span style="font-family: å®‹ä½“; mso-ascii-font-family: Calibri; mso-hansi-font-family: Calibri" class="style5">
+		æ–¹å¾—è‡ªåœ¨</span><span class="style3"><br />
 		</span></td>
 	</tr>
 	<tr>
 		<td class="style2"><br />
 		<p class="MsoNormal" align="center" style="text-align: center">&nbsp;</p>
 		<p class="MsoNormal" style="text-indent: 21.0pt; mso-char-indent-count: 2.0; font-size: x-large;">
-		<span style="font-family: ËÎÌå; mso-ascii-font-family: Calibri; mso-hansi-font-family: Calibri">
-		°´£º</span><span lang="EN-US">2011</span><span style="font-family: ËÎÌå; mso-ascii-font-family: Calibri; mso-hansi-font-family: Calibri">Äê´ºÍí½áÊøºó£¬ÆÀÂÛÖ®Éù²»¾øÓÚ¶ú¡£ÆäÖÐÓÌÒÔÐ¤Ó¥£¨Çå»ª½ÌÊÚ£©¡¢Âí¶«£¨Âí¼¾Ö®×Ó£¬´ºÍíµ¼ÑÝÖ®Ò»£©¹ØÓÚÕÔ±¾É½Ð¡Æ·Ö®ÕùÂÛÎªÊ¢£¬½ø¶øµ½ÈËÉí¹¥»÷£¬¾Í´Ë×÷Ò»ÅúÓï¡£</span></p>
+		<span style="font-family: å®‹ä½“; mso-ascii-font-family: Calibri; mso-hansi-font-family: Calibri">
+		æŒ‰ï¼š</span><span lang="EN-US">2011</span><span style="font-family: å®‹ä½“; mso-ascii-font-family: Calibri; mso-hansi-font-family: Calibri">å¹´æ˜¥æ™šç»“æŸåŽï¼Œè¯„è®ºä¹‹å£°ä¸ç»äºŽè€³ã€‚å…¶ä¸­çŠ¹ä»¥è‚–é¹°ï¼ˆæ¸…åŽæ•™æŽˆï¼‰ã€é©¬ä¸œï¼ˆé©¬å­£ä¹‹å­ï¼Œæ˜¥æ™šå¯¼æ¼”ä¹‹ä¸€ï¼‰å…³äºŽèµµæœ¬å±±å°å“ä¹‹äº‰è®ºä¸ºç››ï¼Œè¿›è€Œåˆ°äººèº«æ”»å‡»ï¼Œå°±æ­¤ä½œä¸€æ‰¹è¯­ã€‚</span></p>
 		<p class="MsoNormal" style="text-indent: 21.0pt; mso-char-indent-count: 2.0; font-size: x-large;">
 		<span lang="EN-US"><o:p>&nbsp;</o:p></span></p>
 		<p class="MsoNormal" style="text-indent: 21.0pt; mso-char-indent-count: 2.0; font-size: x-large;">
 		<span lang="EN-US"><o:p>&nbsp;</o:p></span></p>
 		<p class="MsoNormal" style="text-indent: 21.0pt; mso-char-indent-count: 2.0; font-size: x-large;">
-		<span style="font-family: ËÎÌå; mso-ascii-font-family: Calibri; mso-hansi-font-family: Calibri">
-		±¾É½ÓÐ·ðÐÔ£¬ÖÕ½«ð§·ðÃÅ¡£ÎªºÎ£¿ÆäÀ´ÀúÇå¿à£¬ÈôÎÞ¸ùÖ®Ä¾£¬Æ¯¸¡²»¶¨¡£È»¾¹ÓÚÎÞ´¦µÃ×ÔÔÚ£¬ÇúÒÕÎª·¨£¬ºëÉÆÑïµÂ¡£µÃÔµÈëÇ§ÃÅÍò»§£¬Ê®ÓàÔØ¼ä£¬´«×ÔÔÚÓÚ·¨ÖÚ£¬ËÍ»¶Ð¦ÓÚÃñ¼ä¡£ËùÎ½ÒÔÉÆÑïÉÆ£¬ºñµÂÔØµÀ¡£ºó¹ã½á·¨Ôµ£¬·öÈË¼ÃÀ§£¬Ôì¸£ËÄ·½¡£½ðÒøÎÞÊý£¬ÒàÊÇµÀÊýÓÐºã£¬ÌìÀí¸Ù³££¬²»Îª¹ýÒ²¡£Ã¿ÖÁ´ºÍíÖ®Ò¹£¬¼´ÍÊÈ¥½ðÉí£¬¸´Æä±¾É«£¬ÓÚÏÂÏÂ´¦µÃÉÏÉÏÖÇ£¬ÒàÊÇ¾¯ÊÀÖ®·¨£¬½äÈËÉíÉ«Ö®Íâ£¬ÎðÆú±¾ÐÔ£¬·½µÃ×ÔÔÚ¡£</span></p>
+		<span style="font-family: å®‹ä½“; mso-ascii-font-family: Calibri; mso-hansi-font-family: Calibri">
+		æœ¬å±±æœ‰ä½›æ€§ï¼Œç»ˆå°†çšˆä½›é—¨ã€‚ä¸ºä½•ï¼Ÿå…¶æ¥åŽ†æ¸…è‹¦ï¼Œè‹¥æ— æ ¹ä¹‹æœ¨ï¼Œæ¼‚æµ®ä¸å®šã€‚ç„¶ç«ŸäºŽæ— å¤„å¾—è‡ªåœ¨ï¼Œæ›²è‰ºä¸ºæ³•ï¼Œå¼˜å–„æ‰¬å¾·ã€‚å¾—ç¼˜å…¥åƒé—¨ä¸‡æˆ·ï¼Œåä½™è½½é—´ï¼Œä¼ è‡ªåœ¨äºŽæ³•ä¼—ï¼Œé€æ¬¢ç¬‘äºŽæ°‘é—´ã€‚æ‰€è°“ä»¥å–„æ‰¬å–„ï¼ŒåŽšå¾·è½½é“ã€‚åŽå¹¿ç»“æ³•ç¼˜ï¼Œæ‰¶äººæµŽå›°ï¼Œé€ ç¦å››æ–¹ã€‚é‡‘é“¶æ— æ•°ï¼Œäº¦æ˜¯é“æ•°æœ‰æ’ï¼Œå¤©ç†çº²å¸¸ï¼Œä¸ä¸ºè¿‡ä¹Ÿã€‚æ¯è‡³æ˜¥æ™šä¹‹å¤œï¼Œå³è¤ªåŽ»é‡‘èº«ï¼Œå¤å…¶æœ¬è‰²ï¼ŒäºŽä¸‹ä¸‹å¤„å¾—ä¸Šä¸Šæ™ºï¼Œäº¦æ˜¯è­¦ä¸–ä¹‹æ³•ï¼Œæˆ’äººèº«è‰²ä¹‹å¤–ï¼Œå‹¿å¼ƒæœ¬æ€§ï¼Œæ–¹å¾—è‡ªåœ¨ã€‚</span></p>
 		<p class="MsoNormal" style="text-indent: 21.0pt; mso-char-indent-count: 2.0; font-size: x-large;">
-		<span style="font-family: ËÎÌå; mso-ascii-font-family: Calibri; mso-hansi-font-family: Calibri">
-		ÖÁÓÚÂí¶«£¬ÄËÉÆÒòËùÖÂ¡£Æä´ËÔÚËùµÃ£¬Òà²»Îª¹ý¡£ÏëÆä¸¸Âí¼¾´óÊ¦£¬ÃÖÀÕÕæÉí£¬Ð¦ÉùÄÜ´«Ç§Àï£¬·¨Àí¿É¶ÈÍò·ò¡£ÒàÓÚÇúÒÕÒ»¶Ë£¬µÃµÀ³ÉÈÊ¡£ÈËÎÞËùÇó£¬È´ÓÐËùµÃ£¬×ÔÉí²»µÃ£¬±ØÓÐµÃÕß¡£Æä×Ó³Ð¼Ì£¬ÓÐºÎ¹ýÔÕ£¿¿öÂí¶«ÆäÈË£¬±ü¸¸ÏÍµÂ£¬¶úå¦Ä¿È¾£¬±ØÓÐÆä¿ÉµÀÖ®´¦¡£Èô²»½â´Ë£¬ÄËÑÛÕÏÐÄÃÔ£¬ÍýÄîÉúÑÉ¡£</span></p>
+		<span style="font-family: å®‹ä½“; mso-ascii-font-family: Calibri; mso-hansi-font-family: Calibri">
+		è‡³äºŽé©¬ä¸œï¼Œä¹ƒå–„å› æ‰€è‡´ã€‚å…¶æ­¤åœ¨æ‰€å¾—ï¼Œäº¦ä¸ä¸ºè¿‡ã€‚æƒ³å…¶çˆ¶é©¬å­£å¤§å¸ˆï¼Œå¼¥å‹’çœŸèº«ï¼Œç¬‘å£°èƒ½ä¼ åƒé‡Œï¼Œæ³•ç†å¯åº¦ä¸‡å¤«ã€‚äº¦äºŽæ›²è‰ºä¸€ç«¯ï¼Œå¾—é“æˆä»ã€‚äººæ— æ‰€æ±‚ï¼Œå´æœ‰æ‰€å¾—ï¼Œè‡ªèº«ä¸å¾—ï¼Œå¿…æœ‰å¾—è€…ã€‚å…¶å­æ‰¿ç»§ï¼Œæœ‰ä½•è¿‡å“‰ï¼Ÿå†µé©¬ä¸œå…¶äººï¼Œç§‰çˆ¶è´¤å¾·ï¼Œè€³æ¿¡ç›®æŸ“ï¼Œå¿…æœ‰å…¶å¯é“ä¹‹å¤„ã€‚è‹¥ä¸è§£æ­¤ï¼Œä¹ƒçœ¼éšœå¿ƒè¿·ï¼Œå¦„å¿µç”Ÿç„‰ã€‚</span></p>
 		<p class="MsoNormal" style="text-indent: 21.0pt; mso-char-indent-count: 2.0; font-size: x-large;">
-		<span style="font-family: ËÎÌå; mso-ascii-font-family: Calibri; mso-hansi-font-family: Calibri">
-		ÈôµÀÐ¤Ó¥£¬Ôò·¨ÀíÉõÓÚ·ðÐÔÒ²¡£ÃÀÑ§Ò»¶Ë£¬±Ø³ÉÆäµÀ£¬ÄÚÀï½ÔÓÐ·ðÐÔ¡£ÒÔÃÀÑ§ÂÛÊÀ£¬ÒàÈçÒÔ·ðÐÔ¹ÛÈË£¬Æä±¾Ò»Ò²¡£Ð¤½ÌÊÚ·¨ÀíÓÐµÃ£¬ÒÔ·¨¹Û±¾É½¡¢ÆÀÂí¶«£¬ÆäÀíÎÞ¹ý£¬È»Ö´ÄîÌ«Éî£¬·´±»Àí¸¿¡£¡°ÈË´óÄ³Å®¡±Ö®Æ©Ó÷£¬ÆäÏàÊÇÅúÅÐ£¬ÆäÐÔÊµ±»À§£¬ÆúÉÆÑïÉÆ£¬ÉÆ²»ÖÁÒ²¡£¹ÌÖ´Ò»Äî£¬ÓÚ±¾É½¡¢Âí¶«Ö®·ðÐÔÉÆ¹û£¬½Ô²»Ê¶Ò²¡£ÃÀÑ§Ö®µÀ£¬±ØÓÐ³ÕÃÔ¶ñÏà£¬³ý¶ñÖ®Ê±£¬·´±»¶ñÀ§£¬ÕÏÆä¶úÄ¿£¬²»×ÔÔÚÒ²¡£ÈçÄÜÔ¶Æä·¨Àí£¬ÖØÊ¶·ðÐÔ£¬ÓÚ×Ô¾õ´¦µÃÕæÖª£¬±Ø³É´óÊ¦Ò²¡£</span></p>
+		<span style="font-family: å®‹ä½“; mso-ascii-font-family: Calibri; mso-hansi-font-family: Calibri">
+		è‹¥é“è‚–é¹°ï¼Œåˆ™æ³•ç†ç”šäºŽä½›æ€§ä¹Ÿã€‚ç¾Žå­¦ä¸€ç«¯ï¼Œå¿…æˆå…¶é“ï¼Œå†…é‡Œçš†æœ‰ä½›æ€§ã€‚ä»¥ç¾Žå­¦è®ºä¸–ï¼Œäº¦å¦‚ä»¥ä½›æ€§è§‚äººï¼Œå…¶æœ¬ä¸€ä¹Ÿã€‚è‚–æ•™æŽˆæ³•ç†æœ‰å¾—ï¼Œä»¥æ³•è§‚æœ¬å±±ã€è¯„é©¬ä¸œï¼Œå…¶ç†æ— è¿‡ï¼Œç„¶æ‰§å¿µå¤ªæ·±ï¼Œåè¢«ç†ç¼šã€‚â€œäººå¤§æŸå¥³â€ä¹‹è­¬å–»ï¼Œå…¶ç›¸æ˜¯æ‰¹åˆ¤ï¼Œå…¶æ€§å®žè¢«å›°ï¼Œå¼ƒå–„æ‰¬å–„ï¼Œå–„ä¸è‡³ä¹Ÿã€‚å›ºæ‰§ä¸€å¿µï¼ŒäºŽæœ¬å±±ã€é©¬ä¸œä¹‹ä½›æ€§å–„æžœï¼Œçš†ä¸è¯†ä¹Ÿã€‚ç¾Žå­¦ä¹‹é“ï¼Œå¿…æœ‰ç—´è¿·æ¶ç›¸ï¼Œé™¤æ¶ä¹‹æ—¶ï¼Œåè¢«æ¶å›°ï¼Œéšœå…¶è€³ç›®ï¼Œä¸è‡ªåœ¨ä¹Ÿã€‚å¦‚èƒ½è¿œå…¶æ³•ç†ï¼Œé‡è¯†ä½›æ€§ï¼ŒäºŽè‡ªè§‰å¤„å¾—çœŸçŸ¥ï¼Œå¿…æˆå¤§å¸ˆä¹Ÿã€‚</span></p>
 		<p class="MsoNormal" style="text-indent: 21.0pt; mso-char-indent-count: 2.0; font-size: x-large;">
 		<span lang="EN-US"><o:p>&nbsp;</o:p></span></p>
 		<p class="MsoNormal" style="text-indent: 21.0pt; mso-char-indent-count: 2.0; font-size: x-large;">
-		<span style="font-family: ËÎÌå; mso-ascii-font-family: Calibri; mso-hansi-font-family: Calibri">
-		µÀÒ»ÙÊ£º²»Ê¶±¾ÐÄ£¬ÄÑµÃÕæÐÄ£»¹ÛÈË×ÔÔÚ£¬·½µÃ×ÔÔÚ¡£</span></p>
+		<span style="font-family: å®‹ä½“; mso-ascii-font-family: Calibri; mso-hansi-font-family: Calibri">
+		é“ä¸€åˆï¼šä¸è¯†æœ¬å¿ƒï¼Œéš¾å¾—çœŸå¿ƒï¼›è§‚äººè‡ªåœ¨ï¼Œæ–¹å¾—è‡ªåœ¨ã€‚</span></p>
 		<br />
 		<span class="style4"><br />
 		</span><br />
