--- a/czjszbzr.html
+++ b/czjszbzr.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta http-equiv="Content-Language" content="zh-cn" />
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>深圳市陈正君名班主任工作室</title>
 <style type="text/css">
 .style3 {
