--- a/成功力与初中超常教育.htm
+++ b/成功力与初中超常教育.htm
@@ -4,7 +4,7 @@
 
 <head runat="server">
 <meta http-equiv="Content-Language" content="zh-cn" />
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>成功力与初中超常教育</title>
 <asp:ContentPlaceHolder id="head" runat="server">
 </asp:ContentPlaceHolder>
