--- a/index1.html
+++ b/index1.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta http-equiv="Content-Language" content="zh-cn" />
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>正君之教</title>
 <style type="text/css">
 .style1 {
