--- a/《非虚构写作》阅读笔记.htm
+++ b/《非虚构写作》阅读笔记.htm
@@ -4,7 +4,7 @@
 
 <head runat="server">
 <meta http-equiv="Content-Language" content="zh-cn" />
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>《非虚构写作》阅读笔记</title>
 <asp:ContentPlaceHolder id="head" runat="server">
 </asp:ContentPlaceHolder>
