--- a/两种“时间”在语文教学中的对视.htm
+++ b/两种“时间”在语文教学中的对视.htm
@@ -4,7 +4,7 @@
 
 <head runat="server">
 <meta http-equiv="Content-Language" content="zh-cn" />
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>两种“时间”在语文教学中的对视</title>
 <asp:ContentPlaceHolder id="head" runat="server">
 </asp:ContentPlaceHolder>
