--- a/力行的德育（深圳中学陈正君）.files/header.htm
+++ b/力行的德育（深圳中学陈正君）.files/header.htm
@@ -5,11 +5,11 @@ xmlns:m="http://schemas.microsoft.com/office/2004/12/omml"
 xmlns="http://www.w3.org/TR/REC-html40">
 
 <head>
-<meta http-equiv=Content-Type content="text/html; charset=gb2312">
+<meta http-equiv=Content-Type content="text/html; charset=utf-8">
 <meta name=ProgId content=Word.Document>
 <meta name=Generator content="Microsoft Word 15">
 <meta name=Originator content="Microsoft Word 15">
-<link id=Main-File rel=Main-File href="../力行的德育（深圳中学陈正君）.htm">
+<link id=Main-File rel=Main-File href="../锟斤拷锟叫的碉拷锟斤拷锟斤拷锟斤拷锟斤拷锟斤拷学锟斤拷锟斤拷锟斤拷锟斤拷.htm">
 <!--[if gte mso 9]><xml>
  <o:shapedefaults v:ext="edit" spidmax="2055"/>
 </xml><![endif]-->
