--- a/固本培元学理构建.htm
+++ b/固本培元学理构建.htm
@@ -4,7 +4,7 @@
 
 <head runat="server">
 <meta http-equiv="Content-Language" content="zh-cn" />
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>固本培元&nbsp; 学理构建</title>
 <asp:ContentPlaceHolder id="head" runat="server">
 </asp:ContentPlaceHolder>
