--- a/桃李天下.html
+++ b/桃李天下.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta http-equiv="Content-Language" content="zh-cn" />
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>桃李满天下</title>
 <style type="text/css">
 .style3 {
