--- a/czjszsz.html
+++ b/czjszsz.html
@@ -4,7 +4,7 @@
 <head>
 <meta http-equiv="Content-Language" content="zh-cn" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>宗经养正之道</title>
+<title>养正之道</title>
 <style type="text/css">
 .style3 {
 	text-align: center;
@@ -79,8 +79,8 @@ a:hover {
 <div style="position: absolute; width: 957px; height: 114px; z-index: 3; left: 242px; top: 17px" id="layer6" class="style15">
 <span class="style22">以学生的发展为中心&nbsp;&nbsp; 固本培元&nbsp;&nbsp; 学理构建&nbsp;&nbsp; 仁义礼智信 &nbsp; 正大自光明 分清体用&nbsp; 知行合一</span><br />
 <span class="style22">养心须大&nbsp; 用心须细&nbsp;&nbsp; 自在打开&nbsp; 且乐且长&nbsp;&nbsp; 成功力模式&nbsp;&nbsp; 开学养正 以正驭奇&nbsp; 逐奇失正<br />
-让文章美起来&nbsp;&nbsp; 作文一二三&nbsp; 四元法&nbsp; 六步法&nbsp;&nbsp; 奇法度我&nbsp;&nbsp; 紫藤萝式&nbsp;<br />
-非虚构写作&nbsp;&nbsp; 事情理法 &nbsp; 三分天下&nbsp;&nbsp;&nbsp; 挑逆战狼竞骛争鼎&nbsp;&nbsp;&nbsp;</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </div>
+让文章美起来&nbsp;&nbsp; 作文一二三&nbsp; 四元法&nbsp;&nbsp;&nbsp;
+非虚构写作&nbsp;&nbsp; 事情理法 &nbsp; 三分天下&nbsp;&nbsp;</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </div>
 <p class="style3">&nbsp;</p>
 <p class="style3">&nbsp;</p>
 <p class="style3">&nbsp;</p>
@@ -101,8 +101,7 @@ a:hover {
 <p class="style3">&nbsp;</p>
 <p class="style3">&nbsp;</p>
 <p align="left" class="style3">&nbsp;</p>
-<p align="left" class="style3">欢迎走入：<span class="style20"><a href="http://blog.sina.com.cn/czjszsz">正君新浪博客</a></span></p>
-<p align="left" class="STYLE30">&nbsp;</p>
+<p align="left" class="style3">&nbsp;</p>
 <table width="800" border="1" bordercolor="#FFFFFF" bgcolor="#33CC33">
   <tr>
     <td width="352"><div align="center"><span class="STYLE27">公众号文章</span></div></td>
@@ -186,8 +185,7 @@ a:hover {
     <br />
     <a href="浮云之谶.htm">
     <span style="mso-ascii-font-family: Calibri; mso-ascii-theme-font: minor-latin; mso-fareast-font-family: 宋体; mso-fareast-theme-font: minor-fareast; mso-hansi-font-family: Calibri; mso-hansi-theme-font: minor-latin" class="style18">
-    浮云之</span>
-      <ruby style="ruby-align: distribute-space"><span lang="EN-US" style="font-family: 宋体; mso-ascii-font-family: Calibri; mso-ascii-theme-font: minor-latin; mso-fareast-font-family: 宋体; mso-fareast-theme-font: minor-fareast; mso-hansi-font-family: Calibri; mso-hansi-theme-font: minor-latin" class="style18"><span lang="EN-US">谶</span></span></ruby>
+    浮云之谶</span>
     </a><br />
 </p>
 <p>  <a href="清流/听不见啊.htm">听不见啊！？</a></p>
