--- a/20208/8班九下周志.html
+++ b/20208/8班九下周志.html
@@ -103,7 +103,6 @@
 .STYLE44 {line-height: 150%; font-family: 华文细黑; color: #FFFFFF; }
 .STYLE48 {line-height: 150%; font-family: 华文细黑; color: #000000; }
 .STYLE49 {line-height: 150%; font-family: 华文细黑; color: #FFFF00; }
-.STYLE50 {line-height: 150%; font-family: 华文细黑; color: #CCFFCC; }
 </style>
 </head>
 
@@ -125,10 +124,9 @@
 		    一、任务目标 <br />
 立德树人，全面发展。培养学生的竞争意识、拼搏精神、战斗素养；培养持之以恒、用心专一、勤敬有为，修己达人之德行；培养团队合作、协调关系、解决问题、革故鼎新的能力；培养管控情绪、理性表达、尊师重友、和睦家人的品质。 <br />
 二、步骤内容 <br />
-挑逆——心兵不乱：明确大方向、剔除小毛病、做好眼前事； 
-战狼——孤胆英雄：挣脱旧圈子、打造强学科、鼓励出奇兵； <br />
-竞骛——排山倒海：全科齐推进、精兵变强军、冲锋壮气势； 
-争鼎——笑傲江湖：优势变胜势、从容毫厘间、正大自光明。 <br />
+<span class="style35">挑逆</span>——心兵不乱：明确大方向、剔除小毛病、做好眼前事； 
+<span class="style35">战狼</span>——孤胆英雄：挣脱旧圈子、打造强学科、鼓励出奇兵； <br />
+<span class="style35">竞骛</span>——排山倒海：全科齐推进、精兵变强军、冲锋壮气势；<span class="style35"> 争鼎</span>——笑傲江湖：优势变胜势、从容毫厘间、正大自光明。 <br />
 （一）磨砺意志：核心是“挑战”，挑战自我，完善自我。让每一个学生都在实现个人目标
 的征途上奔跑。 
 （二）合作学习：推进学科小组合作学习，发扬管理育人、协同育人之功。 
