--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ body {
 <body vlink="#FFFFFF" style="margin: 6px; background-color: #33CC33;">
 
 <div style="position: absolute; width: 442px; height: 83px; z-index: 8; left: 121px; top: 322px" id="layer6" class="style21">
-	<p><span class="style29"><a class="btn-default" href="20208/8班九下周志.html">班级周志</a>&nbsp;<a class="btn-default" href="czjszsz.html">教育点滴</a>&nbsp;<a class="btn-default" href="桃李天下.html">桃李芬芳</a><br />
+	<p><span class="style29"><a class="btn-default" href="20208/8班九下周志.html">周志展示</a>&nbsp;<a class="btn-default" href="czjszsz.html">教育点滴</a>&nbsp;<a class="btn-default" href="桃李天下.html">桃李芬芳</a><br />
     </span>
 	  <br />
   </p>
@@ -159,7 +159,7 @@ body {
 <div style="position: absolute; width: 456px; height: 100px; z-index: 11; left: 122px; top: 188px" id="layer9">
   <div align="left"><a href="czjszbzr.html"><img src="czj5.png" width="100" height="100" class="style2" /></a><a href="czjszbzr.html" class="style27"></a>
     <div id="Layer1"><a href="czjszbzr.html" class="style27"><span class="STYLE33">深圳市陈正君名班主任工作室</span></a><br />
-     <span style="font-family: '黑体'; font-size: 14px; text-align: left; color: aliceblue">（第二批名班主持人，建设周期：2019-2021）</span></div>
+     <span style="font-family: '黑体'; font-size: 14px; text-align: left; color: aliceblue">（第二批名班主持人，2019-2021）</span></div>
   </div>
 </div> 
 	
